--- a/sample-kendoui-core-widgets/styles/main.css
+++ b/sample-kendoui-core-widgets/styles/main.css
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
 }
 .map-tools {
     position: absolute;
@@ -66,6 +66,9 @@
 }
 .map-tools .map-tools-button.home {
     left: 0;
+}
+.map-tools .map-tools-button.navigate-on {
+    right: 20px;
 }
 .map-tools .map-tools-button.search {
     right: 0;
